@@ -36,6 +36,7 @@ import java.io.StringReader;
 import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -113,7 +114,8 @@ public class StackUtils {
     } else if (o instanceof Map) {
       out.print("{");
       boolean first = true;
-      for (Object key: ((Map) o).keySet()) {
+      for (Map.Entry keyAndValue: ((Map<?, ?>) o).entrySet()) {
+        Object key = keyAndValue.getKey();
         if (!first) {
           out.print(",");
         }
@@ -124,7 +126,7 @@ public class StackUtils {
           out.print("null");
         }
         out.print(":");
-        objectToJSON(serializer, out, ((Map) o).get(key), recursionLevel, strictJSON);
+        objectToJSON(serializer, out, keyAndValue.getValue(), recursionLevel, strictJSON);
         first = false;
       }
       out.print("}");
@@ -676,7 +678,7 @@ public class StackUtils {
     } else if (o instanceof String) {
       sb.append("'");
       try {
-        sb.append(WarpURLEncoder.encode(o.toString(), "UTF-8"));
+        sb.append(WarpURLEncoder.encode(o.toString(), StandardCharsets.UTF_8));
       } catch (UnsupportedEncodingException uee) {        
       }
       sb.append("'");
