@@ -17,11 +17,10 @@
 package io.warp10.script.functions;
 
 import com.geoxp.GeoXPLib.GeoXPShape;
-import com.google.common.base.Charsets;
-
 import io.warp10.WarpURLEncoder;
 import io.warp10.continuum.gts.GTSEncoder;
 import io.warp10.continuum.gts.GeoTimeSerie;
+import io.warp10.continuum.gts.UnsafeString;
 import io.warp10.crypto.OrderPreservingBase64;
 import io.warp10.script.MemoryWarpScriptStack;
 import io.warp10.script.NamedWarpScriptFunction;
@@ -33,6 +32,7 @@ import io.warp10.script.WarpScriptStack.Mark;
 import io.warp10.script.WarpScriptStackFunction;
 
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.BitSet;
@@ -195,10 +195,18 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
   }
 
   public static void addElement(StringBuilder sb, Object o) throws WarpScriptException {
-    addElement(null, sb, o);
+    addElement(null, sb, o, false);
+  }
+
+  public static void addElement(StringBuilder sb, Object o, boolean readable) throws WarpScriptException {
+    addElement(null, sb, o, readable);
   }
 
   public static void addElement(SNAPSHOT snapshot, StringBuilder sb, Object o) throws WarpScriptException {
+    addElement(snapshot, sb, o, false);
+  }
+  
+  public static void addElement(SNAPSHOT snapshot, StringBuilder sb, Object o, boolean readable) throws WarpScriptException {
 
     AtomicInteger depth = null;
 
@@ -226,10 +234,14 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         sb.append(" ");
       } else if (o instanceof String) {
         sb.append("'");
-        try {
-          sb.append(WarpURLEncoder.encode(o.toString(), "UTF-8"));
-        } catch (UnsupportedEncodingException uee) {
-          throw new WarpScriptException(uee);
+        if (readable) {
+          appendProcessedString(sb, o.toString());
+        } else {
+          try {
+            sb.append(WarpURLEncoder.encode(o.toString(), StandardCharsets.UTF_8));
+          } catch (UnsupportedEncodingException uee) {
+            throw new WarpScriptException(uee);
+          }
         }
         sb.append("' ");
       } else if (o instanceof Boolean) {
@@ -261,49 +273,91 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         }
         sb.append(" ");
       } else if (o instanceof Vector) {
-        sb.append(WarpScriptLib.LIST_START);
-        sb.append(WarpScriptLib.LIST_END);
-        sb.append(" ");
-        for (Object oo : (Vector) o) {
-          addElement(snapshot, sb, oo);
-          sb.append(WarpScriptLib.INPLACEADD);
+        if (readable) {
+          sb.append(WarpScriptLib.LIST_START);
           sb.append(" ");
+          for (Object oo : (Vector) o) {
+            addElement(snapshot, sb, oo, readable);
+          }
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");          
+        } else {
+          sb.append(WarpScriptLib.LIST_START);
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");
+          for (Object oo : (Vector) o) {
+            addElement(snapshot, sb, oo, readable);
+            sb.append(WarpScriptLib.INPLACEADD);
+            sb.append(" ");
+          }
         }
         sb.append(WarpScriptLib.TO_VECTOR);
-        sb.append(" ");
+        sb.append(" ");          
       } else if (o instanceof List) {
-        sb.append(WarpScriptLib.LIST_START);
-        sb.append(WarpScriptLib.LIST_END);
-        sb.append(" ");
-        for (Object oo : (List) o) {
-          addElement(snapshot, sb, oo);
-          sb.append(WarpScriptLib.INPLACEADD);
+        if (readable) {
+          sb.append(WarpScriptLib.LIST_START);
           sb.append(" ");
+          for (Object oo : (List) o) {
+            addElement(snapshot, sb, oo, readable);
+          }          
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");          
+        } else {
+          sb.append(WarpScriptLib.LIST_START);
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");
+          for (Object oo : (List) o) {
+            addElement(snapshot, sb, oo, readable);
+            sb.append(WarpScriptLib.INPLACEADD);
+            sb.append(" ");
+          }          
         }
       } else if (o instanceof Set) {
-        sb.append(WarpScriptLib.LIST_START);
-        sb.append(WarpScriptLib.LIST_END);
-        sb.append(" ");
-        for (Object oo : (Set) o) {
-          addElement(snapshot, sb, oo);
-          sb.append(WarpScriptLib.INPLACEADD);
+        if (readable) {
+          sb.append(WarpScriptLib.LIST_START);
           sb.append(" ");
+          for (Object oo : (Set) o) {
+            addElement(snapshot, sb, oo, readable);
+          }
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");          
+        } else {
+          sb.append(WarpScriptLib.LIST_START);
+          sb.append(WarpScriptLib.LIST_END);
+          sb.append(" ");
+          for (Object oo : (Set) o) {
+            addElement(snapshot, sb, oo, readable);
+            sb.append(WarpScriptLib.INPLACEADD);
+            sb.append(" ");
+          }
         }
         sb.append(WarpScriptLib.TO_SET);
-        sb.append(" ");
+        sb.append(" ");          
       } else if (o instanceof Map) {
-        sb.append(WarpScriptLib.MAP_START);
-        sb.append(WarpScriptLib.MAP_END);
-        sb.append(" ");
-        for (Entry<Object, Object> entry : ((Map<Object, Object>) o).entrySet()) {
-          addElement(snapshot, sb, entry.getValue());
-          addElement(snapshot, sb, entry.getKey());
-          sb.append(WarpScriptLib.PUT);
+        if (readable) {
+          sb.append(WarpScriptLib.MAP_START);
+          sb.append(System.lineSeparator());
+          for (Entry<Object, Object> entry: ((Map<Object, Object>) o).entrySet()) {
+            addElement(snapshot, sb, entry.getKey(), readable);
+            addElement(snapshot, sb, entry.getValue(), readable);
+            sb.append(System.lineSeparator());
+          }                    
+          sb.append(WarpScriptLib.MAP_END);
           sb.append(" ");
+        } else {
+          sb.append(WarpScriptLib.MAP_START);
+          sb.append(WarpScriptLib.MAP_END);
+          sb.append(" ");
+          for (Entry<Object, Object> entry: ((Map<Object, Object>) o).entrySet()) {
+            addElement(snapshot, sb, entry.getValue(), readable);
+            addElement(snapshot, sb, entry.getKey(), readable);
+            sb.append(WarpScriptLib.PUT);
+            sb.append(" ");
+          }          
         }
       } else if (o instanceof BitSet) {
         sb.append("'");
-        sb.append(new String(OrderPreservingBase64.encode(((BitSet) o).toByteArray()), Charsets.UTF_8));
+        sb.append(new String(OrderPreservingBase64.encode(((BitSet) o).toByteArray()), StandardCharsets.UTF_8));
         sb.append("' ");
         sb.append(WarpScriptLib.OPB64TO);
         sb.append(" ");
@@ -311,7 +365,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         sb.append(" ");
       } else if (o instanceof byte[]) {
         sb.append("'");
-        sb.append(new String(OrderPreservingBase64.encode((byte[]) o), Charsets.UTF_8));
+        sb.append(new String(OrderPreservingBase64.encode((byte[]) o), StandardCharsets.UTF_8));
         sb.append("' ");
         sb.append(WarpScriptLib.OPB64TO);
         sb.append(" ");
@@ -355,7 +409,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         // Nevertheless we need to have the correct levels of the stack preserved, so
         // we push an informative string onto the stack there
         try {
-          sb.append("'UNSUPPORTED:" + WarpURLEncoder.encode(o.getClass().toString(), "UTF-8") + "' ");
+          sb.append("'UNSUPPORTED:" + WarpURLEncoder.encode(o.getClass().toString(), StandardCharsets.UTF_8) + "' ");
         } catch (UnsupportedEncodingException uee) {
           throw new WarpScriptException(uee);
         }
@@ -364,6 +418,37 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
       if (null != depth && 0 == depth.addAndGet(-1)) {
         recursionDepth.remove();
       }
+    }
+  }
+
+  //
+  // Process a string to make it readable and compatible in WarpScript code
+  //
+
+  private static void appendProcessedString(StringBuilder sb, String s) {
+
+    char[] chars = UnsafeString.getChars(s);
+
+    int lastIdx = 0;
+    int idx = 0;
+
+    //
+    // Replace anything below 32 and ' by %## (invalid character)
+    //
+
+    while(idx < chars.length) {
+      if ('%' == chars[idx] || '\'' == chars[idx] || chars[idx] < ' ') {
+
+        sb.append(chars, lastIdx, idx - lastIdx);
+        sb.append("%" + (chars[idx] >>> 4) + Integer.toHexString(chars[idx] & 0xF));
+        lastIdx = ++idx;
+      } else {
+        idx++;
+      }
+    }
+
+    if (idx > lastIdx) {
+      sb.append(chars, lastIdx, idx - lastIdx);
     }
   }
 }
